# ur5e_cell

./: .clang-format  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Readme.md  upstream.repos
.github/workflows/: build.yaml  format.yaml
ci/gitlab_templates/: JOB_TEMPLATE.yml  RULES.yml
moveit_servo_demo/: CMakeLists.txt  package.xml
moveit_servo_demo/launch/: moveit_servo_demo.launch.py
pick_place_app/: CMakeLists.txt  README.md  package.xml
pick_place_app/config/: moveitcpp.yaml  path_constraints.yaml  pick_place_static_ur5e.yaml  pick_place_task_ur5e.yaml  point_to_point_ur5e.yaml  waypoints_base_panda.yaml  waypoints_base_ur5e.yaml
pick_place_app/include/pick_place_app/app/: pick_place_static_task.h  pick_place_task.h  point_to_point.h
pick_place_app/include/pick_place_app/skills/: compute_path_with_moveitcpp_skill.h  detect_aruco_marker_skill.h  execute_trajectory_skill.h  modify_planning_scene_skill.h  utils.h
pick_place_app/launch/: aruco_detection_with_realsense.launch.py  mock_io.launch.py  pick_place_demo_panda.launch.py  pick_place_static_demo_panda.launch.py  pick_place_static_demo_ur5e.launch.py  point_to_point_panda.launch.py  point_to_point_ur5e.launch.py  test_psm_demo_ur5e.launch.py
pick_place_app/src/: CMakeLists.txt  main_pick_place_static.cpp  main_pick_place_task.cpp  main_point_to_point.cpp  mock_io_server.cpp
pick_place_app/src/app/: CMakeLists.txt  pick_place_static_task.cpp  pick_place_task.cpp  point_to_point.cpp
pick_place_app/src/skills/: CMakeLists.txt  compute_path_with_moveitcpp_skill.cpp  detect_aruco_marker_skill.cpp  execute_trajectory_skill.cpp  io_gripper_with_ur_skill.cpp  modify_planning_scene_skill.cpp  utils.cpp
ur5e_cell_advanced_pick_n_place/: CMakeLists.txt  README.md  package.xml
ur5e_cell_advanced_pick_n_place/config/: pick_place_static_ur5e.yaml  pick_place_task_ur5e.yaml  point_to_point_panda.yaml  waypoints.yaml
ur5e_cell_advanced_pick_n_place/include/ur5e_cell_advanced_pick_n_place/app/: pick_place_static_task.h  pick_place_task.h  point_to_point.h
ur5e_cell_advanced_pick_n_place/include/ur5e_cell_advanced_pick_n_place/skills/: io_gripper_with_ur_skill.h  modify_planning_scene_skill.h  utils.h
ur5e_cell_advanced_pick_n_place/launch/: aruco_detection_with_realsense.launch.py  mock_io.launch.py  pick_place_demo_panda.launch.py  pick_place_static_demo_panda.launch.py  pick_place_static_demo_ur5e.launch.py  point_to_point_panda.launch.py  point_to_point_ur5e.launch.py  realsense.launch.py  test_psm_demo_ur5e.launch.py
ur5e_cell_advanced_pick_n_place/src/: main_pick_place_static.cpp  main_pick_place_task.cpp  main_point_to_point.cpp  main_test_psm.cpp
ur5e_cell_advanced_pick_n_place/src/app/: pick_place_static_task.cpp  pick_place_task.cpp  point_to_point.cpp
ur5e_cell_advanced_pick_n_place/src/skills/: compute_path_with_moveitcpp_skill.cpp  detect_aruco_marker_skill.cpp  execute_trajectory_skill.cpp  io_gripper_with_ur_skill.cpp  modify_planning_scene_skill.cpp  utils.cpp
ur5e_cell_description/: CMakeLists.txt
ur5e_cell_description/launch/: view_ur_cell.launch.py
ur5e_cell_description/urdf/: robot_cell.xacro  schunk_egp50.xacro  shunk_egp50.xacro  workcell.urdf.xacro
ur5e_cell_moveit_config/: .setup_assistant  package.xml
ur5e_cell_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  ur5e_workcell.srdf  ur5e_workcell.urdf.xacro
ur5e_cell_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  robot.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  ur5e_driver.launch.py  warehouse_db.launch.py
ur5e_cell_moveit_servo/: CMakeLists.txt  package.xml
ur5e_cell_moveit_servo/config/: ros2_controllers.yaml  ur_servo.yaml
ur5e_cell_moveit_servo/launch/: moveit_servo_demo.launch.py  moveit_servo_driver.launch.py
ur5e_cell_moveit_servo/src/: servo_keyboard_input.cpp
ur5e_cell_pick_n_place/config/: moveitcpp.yaml
ur5e_cell_pick_n_place/launch/: pick_n_place.launch.py  pick_n_place_driver.launch.py
ur5e_cell_pick_n_place/src/: pick_n_place_node.cpp
ur_moveit_config/config/: ur_servo.yaml
