<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_servo_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="harshavardhan.deshpande@ipa.fraunhofer.de">Harsh Deshpande</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch_ros</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_servo</depend>
  <depend>rclcpp</depend>
  <depend>ur_robot_driver</depend>
  <depend>ur_bringup</depend>
  <depend>ur_moveit_config</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
